# Containers-for-HPC

./: .gitignore  README.md  containers_for_hpc.pptx  environment.yml  singularity.pptx
docs/: README.md  using_apptainer_for_development.md
examples/: .gitignore  README.md  apptainer_build.slurm  cuda.recipe  xenial_grace.def
examples/apps/: README.md  apps.def  bye.py  hello.py
examples/conda/: .gitignore  Dockerfile  README.md  conda.recipe  create_conda_container.slurm  environment.yml  jupyterlab.recipe  jupyterlab_environment.yml
examples/hpccm/: .gitignore  README.md  development_base.py  development_c++.py  development_c++.recipe  development_cuda.py  development_cuda_base.py  development_intel_base.py  development_node.py  environment.yml  nvidia_hpc_sdk.py  odbc.py  rapids.py  simple.py
examples/hpccm/development_c++/: development_c++.py
examples/hpccm/development_node/: README.md
examples/hpccm/development_node/source-code/: CMakeLists.txt  hello_world_f08.f90
examples/hpccm/mssql_client/: .gitignore  Makefile  README.md  odbc.py
examples/hpccm/multistage/: README.md  conda.py
examples/hpccm/oneapi/: .gitignore  (+6 more)
examples/multistage/: README.md  multistage.def  singlestage.def
examples/persistent_overlays/: .gitignore  README.md  r_container.py  r_container.recipe
examples/python_scripts/: README.md  alpine_python.recipe  test_script.py
examples/reproducible_definitions/: README.md  install_packages.R  r_container.py  r_container.recipe
examples/service/: README.md
examples/simple/: README.md  disco_fpc.def  disco_wine.def
(+9 files in other folders)
